--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,16 +8,21 @@
 <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
+    <h2>
+      <a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a>
+      <btn-ui-button [title]="'Tour of Heroes'" (btnClick)="navigate('https://angular.io/tutorial')"></btn-ui-button>  
+    </h2>
   </li>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">CLI Documentation</a></h2>
+    <h2>
+      <a target="_blank" rel="noopener" href="https://angular.io/cli">CLI Documentation</a>
+      <btn-ui-button [title]="'CLI Documentation'" (btnClick)="navigate('https://angular.io/cli')"></btn-ui-button>
+    </h2>
   </li>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
+    <h2>
+      <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
+      <btn-ui-button [title]="'Angular blog'" (btnClick)="navigate('https://blog.angular.io/')"></btn-ui-button>
+    </h2>
   </li>
 </ul>
-
-<btn-ui-button [title]="'Tour of Heroes'"></btn-ui-button>
-<btn-ui-button [title]="'CLI Documentation'"></btn-ui-button>
-<btn-ui-button [title]="'Angular blog'"></btn-ui-button>
